# intelligent-compliance-mapper

./: .coverage  .dockerignore  .env.example  .gitignore  API_SERVER_README.md  Dockerfile  EXECUTABLE_PERMISSIONS_REPORT.txt  alembic.ini  check_db.py  compliance.db  docker-compose.yml  pyproject.toml  requirements.txt  test_ml_output.txt  test_output.txt  test_output_full.txt
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
data/: sample_controls.txt
data/frameworks/: cis_v8.json  iso_27001.json  nist_csf.json  soc2.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  SECURITY.md
scripts/: run_tests.sh  setup.sh  start_server.py
src/api/: __init__.py  cli.py  server.py
src/core/: analytics.py  batch_processor.py  cross_framework_analyzer.py  exceptions.py  framework_loader.py  (+8 more)
templates/: base.html  report.html
tests/: conftest.py  test_analytics.py  test_batch_processor.py  test_cli.py  test_cli_analytics.py  test_cli_batch.py  test_cli_compare.py  test_cli_framework.py  test_control_matcher.py  test_cross_framework_analyzer.py  test_docker_config.py  test_embeddings.py  test_excel_reporter.py  test_framework_loader.py  test_framework_registry.py  test_gap_analyzer.py  test_html_reporter.py  test_job_queue.py  test_maturity_model.py  test_ml_integration.py  test_pdf_reporter.py  test_reports_integration.py  test_repositories.py  test_risk_scorer.py  test_scheduler.py  test_security.py  test_security_hardening.py  test_similarity.py  test_trend_tracker.py  test_validators.py
(+30 files in other folders)
