[project]
name = "compliance-mapper"
version = "0.1.0"
description = "Enterprise GRC Automation Platform — Week 1 Foundation"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
compliance-mapper = "src.api.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "A",   # builtins
    "S",   # bandit (security)
]
ignore = [
    "S603",  # subprocess call - check for execution of untrusted input
    "S607",  # start process with a partial executable path
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert is standard in pytest

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
